Fix alignment issue

--- a/src/style.css
+++ b/src/style.css
@@ -51,7 +51,7 @@ body {
     top: 0px;
     color: gray;
     margin: 20px;
-    margin-top: -43px;
+    margin-top: -50px;
 }
 
 .project-description {
